# sc-rpi-client

./: .gitignore  README.md  pyproject.toml
doc/: virtual_environments.md
sc_rpi_client/: __init__.py  base_command.py  client.py  exceptions.py  main.py  response.py  sc_rpi.py  sc_rpi_client.py
sc_rpi_client/commands/: __init__.py  base_command.py  disconnect.py  models.py  parameters.py  section_add.py
sc_rpi_client/commands/disconnect/: __init__.py  disconnect_cmd.py
sc_rpi_client/commands/section_add/: __init__.py  section_add_cmd.py  section_add_params.py
sc_rpi_client/exceptions/: __init__.py  sc_rpi_client_error.py
sc_rpi_client/models/: __init__.py  section.py
tests/: mashumaro_test.py
