[tool.poetry]
name = "sc-rpi-client"
version = "0.1.0"
description = ""
authors = ["Bruno Piaggio <brunopiaggiok@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.6"
aiohttp = "^3.12.3"
mashumaro = "^3.16"


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
ruff = "^0.11.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
select = ["ALL"]
line-length = 88

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | (\.direnv)
  | build
  | dist
)/
'''
