[tool.poetry]
name = "sc-rpi-client"
version = "0.1.0"
description = ""
authors = ["Bruno Piaggio <brunopiaggiok@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "==3.12.0"
mashumaro = "^3.16"
aiohttp = ">=3.9.0,<3.12.0"
asyncio = "^3.4.3"


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
ruff = "^0.11.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
select = ["ALL"]
line-length = 88

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | (\.direnv)
  | build
  | dist
)/
'''
